--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,9 @@
     
 </head>
 <body>
-    <h1>Aqui vamos a hacer un post</h1>
-    <p>y este es el parrafo inicial</p>
+    <div id="container">
+    <h1>Este es el titulo atractivo e interesante del post</h1>
+    <p>y este es el parrafo inicial de inicio donde vamos a explicar las cosas incereibles que se pueden hacer con ramas</p>
+    </div>
 </body>
 </html>
