--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,10 @@
     <div id="container">
     <h1>Este es el titulo atractivo e interesante del post</h1>
     <p>y este es el parrafo inicial de inicio donde vamos a explicar las cosas incereibles que se pueden hacer con ramas</p>
+    <p>
+        Los bLogs son la mejor forma de compartir informacion y tus ideas.
+        Mucho mas que ir a conferencias o salir en youtibe. excepto si eres rockstar. pero estadisticamente no lo eres.... por ahora.
+    </p>
     </div>
 </body>
 </html>
