--- a/blogpost.html
+++ b/blogpost.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Titulo del post</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-   
-    <link rel="stylesheet" href="css/estilos.css">
-    
-</head>
-<body>
-    <div id="container">
-    <h1>Este es el titulo atractivo e interesante del post</h1>
-    <p>y este es el parrafo inicial de inicio donde vamos a explicar las cosas incereibles que se pueden hacer con ramas</p>
-    <p>
-        Los bLogs son la mejor forma de compartir informacion y tus ideas.
-        Mucho mas que ir a conferencias o salir en youtibe. excepto si eres rockstar. pero estadisticamente no lo eres.... por ahora.
-    </p>
-    </div>
-</body>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
+    </body>
 </html>
