--- a/blogpost.html
+++ b/blogpost.html
@@ -6,13 +6,16 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
+                Hyperblog Mestro
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>
                     Los Blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto sieres un rockstar. Pero estadisticamente no lo eres.... por ahora.
+                </p>
+                <p>
+                    Suscribite y dale like
                 </p>
             </div>
         </div>
